--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 #server.context-path=/anyHost
-spring.datasource.url=jdbc:mysql://ra1.anystream.eu:3012/emailprroject?serverTimezone=Europe/Athens
+spring.datasource.url=jdbc:mysql://ra1.anystream.eu:3012/emailproject?serverTimezone=Europe/Athens
 spring.datasource.username=root
 spring.datasource.password=AFDEmp_MySQL1
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
